--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="general">
             <div class="header">
                 <div class="left">
-                    <img class="logo" src="portlogo.png">
+                    <img class="logo" src="images/portlogo.png">
                 </div>
                 <div class="center">
                     <button class="head-button">Home</button>
@@ -26,7 +26,7 @@
             </div>
             <div class="main-section">
                 <div class="picture">
-                    <img class="my-picture" src="my pic.jpg">
+                    <img class="my-picture" src="images/my pic.jpg">
                     <div class="introduction">Hello, I'm <strong class="michael">Michael</strong>, student at Vo Thi Sau Highschool.</div>
                 </div>
             </div>
