--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="general">
             <div class="header">
                 <div class="left">
-                    <img class="logo" src="images/portlogo.png">
+                    <img class="logo" src="portlogo.png">
                 </div>
                 <div class="center">
                     <a href="https://michael07legit.github.io/PortfolioWeb/">
@@ -37,7 +37,7 @@
             <div class="main-section">
                 <div class="picture">
                     <div class="my-picture-box">
-                        <img class="my-picture" src="images/my pic.jpg">
+                        <img class="my-picture" src="my pic.jpg">
                         <div class="back-decoration-3"></div>
                     </div>
                     <div class="introduction">Hello, I'm <strong class="michael">Michael</strong>, Front-End Developer & Highschool Student.</div>
