--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <div class="general">
             <div class="header">
                 <div class="left">
-                    <img class="logo" src="images/portlogo-2.png">
+                    <img class="logo" src="portlogo-2.png">
                 </div>
                 <div class="center">
                     <a href="https://michael07legit.github.io/PortfolioWeb/index.html">
