--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <div class="general">
             <div class="header">
                 <div class="left">
-                    <img class="logo" src="images/portlogo.png">
+                    <img class="logo" src="portlogo.png">
                 </div>
                 <div class="center">
                     <a href="https://michael07legit.github.io/PortfolioWeb/">
@@ -35,15 +35,15 @@
             </div>
             <div class="main-section">
                 <button class="facebook">
-                    <img class="media-logo" src="images/2023_Facebook_icon.svg.webp">
+                    <img class="media-logo" src="2023_Facebook_icon.svg.webp">
                     Facebook: Quang Minh
                 </button>
                 <button class="instagram">
-                    <img class="media-logo" src="images/Instagram_logo_2016.svg.png">
+                    <img class="media-logo" src="Instagram_logo_2016.svg.png">
                     Instagram: @qminh.17
                 </button>
                 <button class="zalo">
-                    <img class="media-logo" src="images/Icon_of_Zalo.svg.png">
+                    <img class="media-logo" src="Icon_of_Zalo.svg.png">
                     Zalo: Minh Quang
                 </button>
             </div>
